--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Publish with dotnet
       run: dotnet publish --configuration Release --output build
     - name: Deploy to Github Pages
-      uses: JamesIves/github-pages-deploy-action@releases/v3
+      uses: actions/labeler@v2
       with:
             ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             BASE_BRANCH: master
