--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/labeler@v2
       with:
             repo-token: ${{ secrets.GITHUB_TOKEN }}
-            BASE_BRANCH: master
+            BASE_BRANCH: vserve_pages
             BRANCH: vserve_pages
             FOLDER: dist
             CLEAN: true
