--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,14 +1,14 @@
-name: Jekyll site CI
+name: jekyll
 
 on: [push]
 
 jobs:
-  build-and-deploy:
+  build:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v1
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
@@ -16,10 +16,10 @@ jobs:
     - name: Publish with dotnet
       run: dotnet publish --configuration Release --output build
     - name: Deploy to Github Pages
-      uses: actions/labeler@v2
+      uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
-            repo-token: ${{ secrets.GITHUB_TOKEN }}
-            BASE_BRANCH: vserve_pages
-            BRANCH: vserve_pages
-            FOLDER: dist
-            CLEAN: true
+        ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BASE_BRANCH: master 
+        BRANCH: vserve_pages 
+        FOLDER: build/Client/dist
+        CLEAN: true
